--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mtgdecks-server",
+  "name": "notepad-server",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
@@ -9,11 +9,14 @@
   "author": "James H",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.15.2",
-    "cors": "^2.8.1",
-    "express": "^4.14.0",
-    "mongoose": "^4.7.2",
-    "q": "^1.4.1",
-    "request-promise": "^4.1.1"
+    "body-parser": "^1.18.3",
+    "cors": "^2.8.5",
+    "env2": "^2.2.2",
+    "express": "^4.16.4",
+    "jwt-simple": "^0.5.5",
+    "moment": "^2.24.0",
+    "mongoose": "^5.7.5",
+    "request": "^2.88.0",
+    "request-promise": "^4.2.4"
   }
 }
